<resources>
    <string name="app_name">My Application</string>
    <string name="complete_info">请填写完整信息</string>
    <string name="phone_num_not_exist">该手机号未注册</string>
    <string name="password_not_match">密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="phone_num_not_valid">手机号格式不正确</string>
    <string name="phone_num_exist">该手机号已被注册</string>
    <string name="password_length_not_valid">密码长度不能小于6位</string>"
    <string name="confirm_password_not_match">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="password_update_success">密码修改成功</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="confirm_password">确认密码</string>
    <string name="register">注册</string>
    <string name="find_password">找回密码</string>
    <string name="new_password">新密码（至少六位）</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="submit">提交</string>
    <string name="select_field">选择你的兴趣领域</string>
    <string name="culture">文化</string>
    <string name="science">科学</string>
    <string name="technology">技术</string>
    <string name="sports">体育</string>
    <string name="art">艺术</string>
    <string name="determine_choices">确认选择</string>
    <string name="jump">跳过</string>
    <string name="home">主页</string>
    <string name="community">社区</string>
    <string name="profile">个人中心</string>
</resources>