<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_password"
        android:textColor="@color/text_secondary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/phone_num"
        android:inputType="phone"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/primary"
        android:text="@string/submit"
        android:textColor="@color/text_primary" />

</LinearLayout>
